# example-plotly

./: Cargo.toml
example-py/: a.py  pyproject.toml
example-rs/: Cargo.toml
example-rs/examples/: a.rs
