[tool.poetry]
name = "example-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "example_py"}]

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "src/typestubs" ]
executionEnvironments = [ {root = "src"} ]
#stubPath = "src/stubs"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
